fix updated at on small desktop

--- a/client/src/dashboard/styles/dashboard/_card.scss
+++ b/client/src/dashboard/styles/dashboard/_card.scss
@@ -62,6 +62,10 @@
   .updated-at {
     color: $secondary-text-colour;
     clear: both;
+
+    @media (min-width: $screen-md){
+      padding-bottom: 30px;
+    }
   }
 
   .main-kpi {
